@@ -428,6 +428,7 @@ class Creature < Container
   protected
   def on_being_dropped(container)
     super(container)
+    remove_status(:anointed) if anointed?
     @state = :thrown
   end
 
