@@ -14,7 +14,8 @@ module Wrath
     BORDER_WIDTH = 1
     PATIENCE_DURATION = 30 # 30s before first disaster.
 
-    LOVE_MULTIPLIER = 2 # Favour multiplier for loved type.
+    ANOINTED_MULTIPLIER = 1.5
+    LOVE_MULTIPLIER = 1.5 # Favour multiplier for loved type.
 
     event :on_disaster_start
     event :on_disaster_end
@@ -38,6 +39,7 @@ module Wrath
 
     def favor_for(object)
       favor = object.base_favor
+      favor *= ANOINTED_MULTIPLIER if object.is_a? Creature and object.anointed?
       favor *= LOVE_MULTIPLIER if (object.class == @loves)
       favor
     end
